--- a/style.css
+++ b/style.css
@@ -60,3 +60,10 @@ a:hover {
     color: rgb(42, 12, 209);
     padding: 10px;
 }
+
+table{
+    background-color: white;
+    color: tomato;
+    padding: 10px;
+    width: 500px;
+}
