--- a/style.css
+++ b/style.css
@@ -67,3 +67,12 @@ table{
     padding: 10px;
     width: 500px;
 }
+
+/* Classes --- you can change a particular tag using the class --- dot notation */
+
+.TopNav { /* Top Naviagtion */
+
+    background-color: rgb(250, 250, 250);
+    width: auto;
+    padding: 10px;
+}
