--- a/style.css
+++ b/style.css
@@ -74,7 +74,24 @@ table{
 
     background-color: rgb(250, 250, 250);
     width: auto;
-    padding: 10px;
+    overflow: hidden;
+}
+
+
+.TopNav a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+
+/*Hide the link that should open and close the topnav on small screens*/
+.TopNav .icon {
+    display: none;
 }
 
 
@@ -141,4 +158,33 @@ input[type=reset]:hover{
     color: rgb(236, 243, 242);
     border-radius: 10px;
     width: 120px;
+}
+
+
+
+/* When the screen is less than 600px wide, hide all links, except for the first one
+("Home"). Show the link that contains should open and close the topnav (.icon)*/
+
+@media screen and (max-width: 600px) {
+    .TopNav a:not(:first-child) {display: none;}
+    .TopNav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user cliscks on the icon.
+This class makes the topnav look good on small screens (dispaly the links vertically instead of horizontally*/
+@media screen and (max-width: 600px) {
+    .TopNav.responsive {position: relative;}
+    .TopNav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .TopNav.responsive a{
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
