--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ input[type=reset]:hover{
     }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user cliscks on the icon.
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon.
 This class makes the topnav look good on small screens (dispaly the links vertically instead of horizontally*/
 @media screen and (max-width: 600px) {
     .TopNav.responsive {position: relative;}
